--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,12 @@ email-validator==1.1.3
 fastapi==0.70.1
 filelock==3.4.2
 greenlet==1.1.2
+gunicorn==20.1.0
 h11==0.12.0
 httptools==0.2.0
 idna==3.3
+importlib-metadata==4.10.0
+importlib-resources==5.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
 Mako==1.1.6
@@ -47,3 +50,4 @@ uvicorn==0.15.0
 virtualenv==20.10.0
 watchgod==0.7
 websockets==10.1
+zipp==3.7.0
